* Apply patch fixing IPv6 for ipopd. Closes: bug#348369 (thanks to   Sjoerd Simons <sjoerd@debian.org>). * Improve local cdbs snippets:   + Fix namespaces.   + Use newer local debhelper snippet again, this time appending to     dh_gencontrol rather than override it. Adjust po-debconf.   + Add and enable new auto-update snippet. Move debian/control.in to     debian/control.in.in. * Correct copyright info for debian/rules (debmake skeleton is long   gone). * Fix order of parameters/options to find in debian/rules.

--- a/debian/control.in.in
+++ b/debian/control.in.in
@@ -45,7 +45,7 @@ Package: libc-client-dev
 Priority: extra
 Section: libdevel
 Architecture: any
-Depends: libc-client2002edebian (= ${Source-Version}), ${devlibs:Depends}
+Depends: libc-client__VER__ (= ${Source-Version}), ${devlibs:Depends}
 Conflicts: c-client-dev, libc-client4.7-dev, libc-client2000-dev, libc-client2001-dev, libc-client2002-dev, libc-client2002ddebian-dev
 Replaces: c-client-dev, libc-client4.7-dev, libc-client2000-dev, libc-client2001-dev, libc-client2002-dev, libc-client2002ddebian-dev
 Description: UW c-client library for mail protocols
@@ -56,7 +56,7 @@ Description: UW c-client library for mail protocols
  This package contains the static lib and headers for using the c-client mail
  handling library.
 
-Package: libc-client2002edebian
+Package: libc-client__VER__
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${debconf-depends}, libpam-modules, mlock
