--- a/debian/libc-client__VER__.templates.in
+++ b/debian/libc-client__VER__.templates.in
@@ -22,6 +22,10 @@ Description-da.UTF-8: Fortsæt installation af libc-client uden understøttelse 
  Libc-client tidligere end version 2002d (og udvikler-versioner af 2003) indeholdt en uofficiel og ikke længere vedligeholdt rettelse til understøttelse af Maildir. Som standard blev Maildir ikke benyttet af uw-imapd eller ipopd, men hvis du har ændret din systemopsætning eller andre installerede programmer som afhænger af libc-client vil denne opgradering medføre at fejl i håndtering af emails.
  .
  Vil du fortsætte installation af libc-client uden Maildir understøttelse?
+Description-de.UTF-8: Die Installation von libc-client ohne Maildir-Unterstützung fortsetzen?
+ Libc-client-Versionen, die älter als Version 2002d sind (und Entwicklerversionen von 2003) enthielten einen nichtoffiziellen und nicht mehr gepflegten Patch zur Maildir-Unterstützung. In der Voreinstellung wurden Maildirs von uw-imapd oder ipopd nicht verwendet. Aber wenn Sie Ihre Systemeinstellungen geändert haben oder wenn andere installierte Programme von libc-client abhängen, kann das Upgrade zu einer defekten E-Mail-Verarbeitung führen.
+ .
+ Wollen Sie die Installation von libc-client ohne Maildir-Unterstützung fortsetzen?
 Description-es.UTF-8: ¿Desea continuar instalando libc-client sin soporte para Maildir?
  Las libc-client anteriores a la versión 2002d (y versiones de desarrollo de 2003) incluyen un parche no oficial para soportar «Maildirs» para el que no se da ya soporte. Por omisión uw-imapd o ipopd no usan «Maildirs», pero si ha cambiado la configuración de su sistema u otros programas instalados dependen de libc-client la actualización puede causar problemas en la gestión del correo. 
  .
@@ -30,10 +34,22 @@ Description-fr.UTF-8: Faut-il poursuivre l'installation de libc-client sans gest
  Les versions de libc-client antérieures à 2002d (et les versions de développement de 2003) incluaient une rustine non officielle et non maintenue pour la gestion des répertoires de courriel au format « Maildir ». Ce format n'était pas celui par défaut pour uw-imapd ou ipopd. Toutefois, si votre configuration système a été modifiée ou que d'autres programmes installés dépendent de libc-client, la gestion du courriel pourrait être perturbée.
  .
  Veuillez confirmer que vous souhaitez bien installer un libc-client sans gestion des répertoires de courriel au format Maildir.
+Description-gl.UTF-8: ¿Seguir a instalar libc-client sen soporte de Maildir?
+ As versións de libc-client anteriores á 2002d (e as versións de desenvolvemento da 2003) incluían un parche non oficial e que xa non se mantén para soportar Maildirs. Os Maildirs non os empregaba por defecto uw-imapd nin ipopd, pero se cambiou a configuración do sistema ou outros programas instalados dependen de libc-client, a xestión do correo pode fallar trala actualización.
+ .
+ ¿Quere seguir instalando libc-client sen soporte de Maildir?
 Description-ja.UTF-8: Maildir サポートなしで libc-client のインストールを続けますか?
  libc-client のバージョン 2002d 以下 (および 2003 の開発バージョン) では Maildirs をサポートする非公式でもうメンテナンスされていないパッチが含まれていました。デフォルトでは uw-imapd や ipopd では Maildirs を使いませんが、システム設定を変更していたり、その他のインストール済みプログラムが libc-client に依存しているのであれば、この更新はメール操作に障害をもたらす結果となります。
  .
  Maildir サポートなしで libc-client のインストールを続けますか?
+Description-nl.UTF-8: Verder gaan met het installeren van libc-client zonder Maildir-ondersteuning?
+ Libc-client versies voor 2002d (en ontwikkelaarsversies van 2003) bevatten een onofficiële en niet langer ondersteunde wijziging om Maildirs te ondersteunen. Standaard werden Maildirs niet gebruikt door uw-imapd of ipopd, maar indien u uw systeeminstellingen hebt gewijzigd of programma's hebt geïnstalleerd die afhankelijk zijn van libc-client, dan kan mail-afhandeling door de opwaardering defect raken.
+ .
+ Wilt u doorgaan met het installeren van een libc-client zonder Maildir-ondersteuning?
+Description-pt.UTF-8: Continuar a instalar o libc-client sem suporte para Maildir?
+ O Libc-client anterior à versão 2002d (e versões de desenvolvimento de 2003) incluíam um patch não oficial e já não mantido para suportar Maildirs. Por omissão, Maildirs não são utilizadas pelo uw-imapd ou pelo ipopd, mas se alterou a configuração do seu sistema ou outros programas instalados que dependam do libc-client então fazer um upgrade pode resultar em que deixe de funcionar o mail.
+ .
+ Quer continuar a instalar o libc-client sem suporte para Maildir?
 Description-sv.UTF-8: Fortsätta installera libc-klienten utan Maildir-stöd?
  Libc-klienten före version 2002d (och utvecklingsversioner av 2003) inkluderar en icke officiell och inte längre omskött patch för att stöda Maildirs. Dom standard användes inte Maildir av uw-imapd eller ipopd men om du har ändrat din systemkonfiguration eller andra installerade program har beroende av libc-klienten så kan uppgraderingen resultera i att e-posthanteringen bryts.
  .
